<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.arblib</groupId>
	<artifactId>arb4j</artifactId>
	<version>0.81</version>
	<properties>
		<lwjgl.version>3.3.1</lwjgl.version>
		<lwjgl3-awt.version>0.1.8</lwjgl3-awt.version>
		<lwjgl.natives>natives-linux</lwjgl.natives>
		<maven.javadoc.failOnError>false</maven.javadoc.failOnError>
		<mdep.outputFile>class.path</mdep.outputFile>
		<maven.compiler.source>18</maven.compiler.source>
		<maven.compiler.target>18</maven.compiler.target>
	</properties>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>18</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.4.0</version>
				<configuration>
					<show>public</show>
					<stylesheetfile>stylesheet.css</stylesheetfile>
				</configuration>
			</plugin>


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>

	</build>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.lwjgl</groupId>
				<artifactId>lwjgl-bom</artifactId>
				<version>${lwjgl.version}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>com.massisframework</groupId>
			<artifactId>j-text-utils</artifactId>
			<version>0.3.4</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm</artifactId>
			<version>9.3</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm-util</artifactId>
			<version>9.3</version>
		</dependency>
		<dependency>
			<groupId>io.humble</groupId>
			<artifactId>humble-video-all</artifactId>
			<version>0.3.0</version>
		</dependency>
		<dependency>
			<groupId>org.l33tlabs.twl</groupId>
			<artifactId>pngdecoder</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>de.gsi.chart</groupId>
			<artifactId>chartfx-chart</artifactId>
			<version>11.2.7</version>
		</dependency>
		<dependency>
			<groupId>de.gsi.math</groupId>
			<artifactId>chartfx-math</artifactId>
			<version>11.2.7</version>
		</dependency>
		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<version>11.0.0</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
		</dependency>
		<dependency>
			<groupId>org.jogamp.jogl</groupId>
			<artifactId>jogl-all</artifactId>
			<version>2.3.1</version>
		</dependency>

		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-stb</artifactId>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl</artifactId>
			<classifier>${lwjgl.natives}</classifier>
		</dependency>

		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-assimp</artifactId>
			<classifier>${lwjgl.natives}</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-glfw</artifactId>
			<classifier>${lwjgl.natives}</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-opengl</artifactId>
			<classifier>${lwjgl.natives}</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-stb</artifactId>
			<classifier>${lwjgl.natives}</classifier>
		</dependency>
		<dependency>
			<groupId>org.joml</groupId>
			<artifactId>joml</artifactId>
			<version>1.10.4</version>
		</dependency>
		<dependency>
			<groupId>com.github.orange451</groupId>
			<artifactId>LWJGUI</artifactId>
			<version>pre-mt</version>
		</dependency>
	</dependencies>


	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		<repository>
			<id>sonatype</id>
			<name>sonatype</name>
			<url>https://oss.sonatype.org/content/repositories/releases</url>
		</repository>
		<repository>
			<id>spinyowl</id>
			<url>https://raw.github.com/SpinyOwl/repo/releases</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>amelentev</id>
			<url>https://amelentev.github.io/mvnrepo/</url>
		</repository>
		<repository>
			<id>central</id>
			<name>Maven Repository Switchboard</name>
			<url>https://repo1.maven.org/maven2</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>oracleReleases</id>
			<name>Oracle Released Java Packages</name>
			<url>https://download.oracle.com/maven</url>
			<layout>default</layout>
		</repository>


	</repositories>


</project>